--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h1 {
     padding: 8px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
+    bottom: 140%;
     left: 50%;
     margin-left: -80px;
     padding: 3px;
